--- a/entry/oh-package.json5
+++ b/entry/oh-package.json5
@@ -5,6 +5,10 @@
   "main": "",
   "author": "",
   "license": "",
-  "dependencies": {}
+  "dependencies": {
+    "@yunkss/eftool": "1.0.2",  //https://gitee.com/yunkss/ef-tool#eftool
+    "@js-joda/core": "5.4.2",   //https://js-joda.github.io/js-joda/manual/LocalDate.html
+    "@isrc/easyui": "1.0.1"     //https://gitee.com/zw0601/ohos_easyui#easyui
+  }
 }
 
