适配@js-joda/core插件，测试日期信息解析方式

--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -19,7 +19,7 @@
         "icon": "$media:icon",
         "label": "$string:app_name",
         "startWindowIcon": "$media:icon",
-        "startWindowBackground": "$color:start_window_background",
+        "startWindowBackground": "$color:grey_light",
         "exported": true,
         "skills": [
           {
