--- a/entry/oh-package.json5
+++ b/entry/oh-package.json5
@@ -6,8 +6,7 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "@ohmos/calendar": "2.0.1",
-    "dayjs": "1.11.7",
+    "cjcalendar": "1.1.1",
     "@yunkss/eftool": "1.0.2",    //https://gitee.com/yunkss/ef-tool#eftool
     "@isrc/easyui": "1.0.1"       //https://gitee.com/zw0601/ohos_easyui#easyui
   }
