--- a/entry/oh-package.json5
+++ b/entry/oh-package.json5
@@ -7,6 +7,7 @@
   "license": "",
   "dependencies": {
 //    "@ohos/pulltorefresh": "2.0.5",
+    "@mcui/mccharts": "1.0.2",
 //    "@yunkss/eftool": "1.0.2",    //https://gitee.com/yunkss/ef-tool#eftool
 //    "@isrc/easyui": "1.0.1"       //https://gitee.com/zw0601/ohos_easyui#easyui
   }
