--- a/oh-package.json5
+++ b/oh-package.json5
@@ -1,13 +1,10 @@
 {
-  "name": "MakeHabit",
-  "version": "0.0.1",
+  "modelVersion": "5.0.0",
   "description": "Please describe the basic information.",
-  "main": "",
-  "author": "",
-  "license": "",
   "dependencies": {
   },
   "devDependencies": {
-    "@ohos/hypium": "1.0.13"
+    "@ohos/hypium": "1.0.18",
+    "@ohos/hamock": "1.0.0"
   }
 }
